--- a/_includes/script.html
+++ b/_includes/script.html
@@ -18,17 +18,17 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!-- new -->
-<script type="text/javascript" src="/assets/js/front.min.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/front.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery.flexslider.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/jquery.flexslider.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery-migrate.min.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/jquery-migrate.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery.blockUI.min.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/jquery.blockUI.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/jquery.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery.infinitescroll.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/jquery.infinitescroll.js"></script>
 
 <script type="text/javascript" src="/assets/js/add-to-cart.min.js"></script>
 
@@ -36,17 +36,17 @@
 
 <script type="text/javascript" src="/assets/js/cart-fragments.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/slick.min.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/slick.min.js"></script>
 
 <script type="text/javascript" src="/assets/js/wp-embed.min.js"></script>
 
 <script type="text/javascript" src="/assets/js/widgetApi.js"></script>
 
-<script type="text/javascript" src="/assets/js/modernizr.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/modernizr.js"></script>
 
 <script type="text/javascript" src="/assets/js/prefixfree.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/scripts.js"></script>
+<script type="text/javascript" src="https://github.com/Zen-developers/zendigital.github.io/assets/js/scripts.js"></script>
 
 <script type="text/javascript" src="/assets/js/bj-lazy-load.min.js"></script>
 
