added /zendigital.github.io to assets src""

--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,15 +1,15 @@
  <!-- END VENDOR LIBRARIES -->
   
 <script id="__LOADABLE_REQUIRED_CHUNKS__" type="application/json">[0,1,2,3,31,55,38,39,25]</script>
-<script data-chunk="common" src="/assets/js/vendor.ui-components.b5f738664e2da9c15088.js"></script>
-<script data-chunk="common" src="/assets/js/vendor.apollo.7661104ab579a288a3b0.js"></script>
-<script data-chunk="common" src="/assets/js/vendor.react.0c5c5d339ebe56220b77.js"></script>
-<script data-chunk="common" src="/assets/js/vendor.react-router.adc35435e5aaf18736dc.js"></script>
-<script data-chunk="common" src="/assets/js/vendor.lodash.73c31f82ae422bd28b18.js"></script>
-<script data-chunk="common" src="/assets/js/vendor.9379b311b0b2cc12c7e2.js"></script>
-<script data-chunk="common" src="/assets/js/common.57b685e6cc1879eab168.js"></script>
-<script data-chunk="assets" src="/assets/js/assets.f71dfe0033a785dade17.js"></script>
-<script data-chunk="zen" src="/assets/js/zen.43dc9a682be20a1f7d0c.js"></script>
+<script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.ui-components.b5f738664e2da9c15088.js"></script>
+<script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.apollo.7661104ab579a288a3b0.js"></script>
+<script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.react.0c5c5d339ebe56220b77.js"></script>
+<script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.react-router.adc35435e5aaf18736dc.js"></script>
+<script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.lodash.73c31f82ae422bd28b18.js"></script>
+<script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.9379b311b0b2cc12c7e2.js"></script>
+<script data-chunk="common" src="/zendigital.github.io/assets/js/common.57b685e6cc1879eab168.js"></script>
+<script data-chunk="assets" src="/zendigital.github.io/assets/js/assets.f71dfe0033a785dade17.js"></script>
+<script data-chunk="zen" src="/zendigital.github.io/assets/js/zen.43dc9a682be20a1f7d0c.js"></script>
 
 <script type="text/javascript" src="/assets/js/intl-messageformat-with-locales.min.js"></script>
 
@@ -40,13 +40,13 @@
 
 <script type="text/javascript" src="/assets/js/wp-embed.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/widgetApi.js"></script>
+<script type="text/javascript" src="assets/js/widgetApi.js"></script>
 
-<script type="text/javascript" src="/assets/js/modernizr.js"></script>
+<script type="text/javascript" src="assets/js/modernizr.js"></script>
 
-<script type="text/javascript" src="/assets/js/prefixfree.min.js"></script>
+<script type="text/javascript" src="assets/js/prefixfree.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/scripts.js"></script>
+<script type="text/javascript" src="assets/js/scripts.js"></script>
 
 <script type="text/javascript" src="/assets/js/bj-lazy-load.min.js"></script>
 
