--- a/_includes/script.html
+++ b/_includes/script.html
@@ -8,37 +8,37 @@
 <script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.lodash.73c31f82ae422bd28b18.js"></script>
 <script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.9379b311b0b2cc12c7e2.js"></script>
 <script data-chunk="common" src="/zendigital.github.io/assets/js/common.57b685e6cc1879eab168.js"></script>
-<script data-chunk="assets" src="/zendigital.github.io/assets/js/assets.f71dfe0033a785dade17.js"></script>
+<script data-chunk="assets" src="/zendigital.github.io/assets/jsassets.f71dfe0033a785dade17.js"></script>
 <script data-chunk="zen" src="/zendigital.github.io/assets/js/zen.43dc9a682be20a1f7d0c.js"></script>
 
-<script type="text/javascript" src="/assets/js/intl-messageformat-with-locales.min.js"></script>
+<script type="text/javascript" src="assets/js/intl-messageformat-with-locales.min.js"></script>
 
 <!-- I think this is for scroll -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!-- new -->
-<script type="text/javascript" src="/assets/js/front.min.js"></script>
+<script type="text/javascript" src="assets/js/front.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery.flexslider.js"></script>
+<script type="text/javascript" src="assets/js/jquery.flexslider.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery-migrate.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery-migrate.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery.blockUI.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery.blockUI.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery.js"></script>
+<script type="text/javascript" src="assets/js/jquery.js"></script>
 
-<script type="text/javascript" src="/assets/js/jquery.infinitescroll.js"></script>
+<script type="text/javascript" src="assets/js/jquery.infinitescroll.js"></script>
 
-<script type="text/javascript" src="/assets/js/add-to-cart.min.js"></script>
+<script type="text/javascript" src="assets/js/add-to-cart.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/api.js"></script>
+<script type="text/javascript" src="assets/js/api.js"></script>
 
-<script type="text/javascript" src="/assets/js/cart-fragments.min.js"></script>
+<script type="text/javascript" src="assets/js/cart-fragments.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/slick.min.js"></script>
+<script type="text/javascript" src="assets/js/slick.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/wp-embed.min.js"></script>
+<script type="text/javascript" src="assets/js/wp-embed.min.js"></script>
 
 <script type="text/javascript" src="assets/js/widgetApi.js"></script>
 
@@ -48,24 +48,24 @@
 
 <script type="text/javascript" src="assets/js/scripts.js"></script>
 
-<script type="text/javascript" src="/assets/js/bj-lazy-load.min.js"></script>
+<script type="text/javascript" src="assets/js/bj-lazy-load.min.js"></script>
 
-<script type="text/javascript" src="/assets/js/osd.js"></script>
+<script type="text/javascript" src="assets/js/osd.js"></script>
 
-<script type="text/javascript" src="/assets/js/sfp.js"></script>
+<script type="text/javascript" src="assets/js/sfp.js"></script>
 
-<script type="text/javascript" src="/assets/js/chartbeat.js"></script>
+<script type="text/javascript" src="assets/js/chartbeat.js"></script>
 
 <!-- Screen Sizing -->
 
-<script type="text/javascript" src="/assets/js/rate-limit.js"></script>
+<script type="text/javascript" src="assets/js/rate-limit.js"></script>
 
-<script data-chunk="home-page" src="/assets/js/home-page.0d7e93e288e1b0e3f2ef.js"></script>
-<script data-chunk="siteheader" src="/assets/js/siteheader.58098cbc7026ae10eb1.js"></script>
-<script data-chunk="navbar" src="/assets/js/navbar.644b02da65bc67feed8b.js"></script>
-<script data-chunk="navfooter" src="/assets/js/navfooter.f3e672feb51aed506aaf.js"></script>
-<script data-chunk="footer" src="/assets/js/footer.00c4cc4b52252868e407.js"></script>
-<script data-chunk="footer" src="/assets/js/angular.min.js"></script>
+<script data-chunk="home-page" src="assets/js/home-page.0d7e93e288e1b0e3f2ef.js"></script>
+<script data-chunk="siteheader" src="assets/js/siteheader.58098cbc7026ae10eb1.js"></script>
+<script data-chunk="navbar" src="assets/js/navbar.644b02da65bc67feed8b.js"></script>
+<script data-chunk="navfooter" src="assets/js/navfooter.f3e672feb51aed506aaf.js"></script>
+<script data-chunk="footer" src="assets/js/footer.00c4cc4b52252868e407.js"></script>
+<script data-chunk="footer" src="assets/js/angular.min.js"></script>
 
 
 <!-- This is The Header Animation -->
