--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -12,6 +12,7 @@ header {
     -webkit-transition:all 0.1s ease-in-out !important;
     transition:all 0.1s ease-in-out !important;
     color:#000000 !important;
+    fill:#000000 !important;
    
 }
 
