--- a/_includes/script.html
+++ b/_includes/script.html
@@ -8,7 +8,7 @@
 <script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.lodash.73c31f82ae422bd28b18.js"></script>
 <script data-chunk="common" src="/zendigital.github.io/assets/js/vendor.9379b311b0b2cc12c7e2.js"></script>
 <script data-chunk="common" src="/zendigital.github.io/assets/js/common.57b685e6cc1879eab168.js"></script>
-<script data-chunk="assets" src="/zendigital.github.io/assets/jsassets.f71dfe0033a785dade17.js"></script>
+<script data-chunk="assets" src="/zendigital.github.io/assets/js/assets.f71dfe0033a785dade17.js"></script>
 <script data-chunk="zen" src="/zendigital.github.io/assets/js/zen.43dc9a682be20a1f7d0c.js"></script>
 
 <script type="text/javascript" src="assets/js/intl-messageformat-with-locales.min.js"></script>
