--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,8 +1,8 @@
 
               <div>
 
-                <div class="hero m-b-7-1" priority="2" style="background-image: url({{site.posts[0].image}})">
-
+                <div class="hero m-b-7-1" priority="2" style="background-image: url(http://images.weserv.nl/?url=zen-developers.github.io/zendigital.github.io{{site.posts[0].image}}&w=200&h=200&output=jpg&q=65)">
+                  
                   <a href="{{site.posts[0].url}}">
 
                     <div class="hero__mask col-12-xs dsp-flex-xs flex-wrap grd-algn-flex-end-xs p-6-l p-t-7-xl p-r-7-xl p-b-6-xl p-l-7-xl">
