--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -30,7 +30,7 @@
                             <picture>
                               <source srcset="{{post.image}}" media="(min-width: 400px; min-height:700px)">
                               <source srcset="{{post.image}}" media="(min-width: 0px)">
-                              <img priority="2" class="" src="{{post.image}}">
+                              <img src="http://images.weserv.nl/?url=https://zen-developers.github.io/zendigital.github.io/{{post.image}}&w=200&h=200&output=jpg&q=65"/>
                             </picture>
 
                           </div>
