--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,6 @@
 
 								<div class="long-form-article__content">
 
-									<div class="long-form-article__content">
 
 										<div class="long-form-article-header-container">
 
@@ -58,18 +57,17 @@
 
 												<div class="long-form-article__content__header__inner m-l-aut-xs m-r-aut-xs m-l-0-xl m-r-0-xl">
 													
-													<div class="article__byline bod-xs dsp-flex-xs grd-algn-flex-start-xs">lxkfljsdlkfjglksjlkfjskldfj
-
+													<div class="article__byline bod-xs dsp-flex-xs grd-algn-flex-start-xs">
 														<div>
 															
-															<a class="primary-topic primary-topic--text long-form-article__byline__topic dsp-block-xs dsp-inline-block-m hed-xs" href="">lsdfkgsjdl
+															<a class="primary-topic primary-topic--text long-form-article__byline__topic dsp-block-xs dsp-inline-block-m hed-xs" href="">Music
 																
 															</a>
 
 														</div>
 
 															<div class="dsp-none-xs dsp-block-m m-l-2-xs m-r-2-xs pipe">
-															kdsfjksdgj
+															|
 															</div>
 
 														<div class="dsp-none-xs dsp-block-m">
@@ -78,22 +76,17 @@
 																
 																<div class="article__contributions__contributors">
 																	
-																	<span class="contributor__by">
-																		kdfhksdfjks
+																	<span class="contributor__by">by<!-- --->
 																	</span>
 
-																	<a class="contributor__link hed-xs" title="" href="">sfdgjsdkfg</a>
+																	<a class="contributor__link hed-xs" title="Frankie Dunn" href="">Frankie Dunn</a>
 
 																</div>
 
-																<div class="m-l-2-xs m-r-2-xs pipe">
-																kdfhkdfkgf
+																<div class="m-l-2-xs m-r-2-xs pipe">|
 																</div>
 
-																<div class="article__contributions__publishdate">
-																	
-																		sdjhfjsfdj
-
+																<div class="article__contributions__publishdate">11 November 2019, 8:00am
 																</div>
 
 															</div>
@@ -103,7 +96,7 @@
 													</div>
 
 													<h1 class="article__title hed-xxl m-t-3-xs m-b-4-xs m-b-5-m">
-														jkdsfjsdkfjgdks
+														vegyn just released your new favourite album
 													</h1>
 
 												</div>
@@ -111,6 +104,63 @@
 											</div>
 
 										</div>
+
+										<div class="body long-form-article__content__body p-l-4-xs p-r-4-xs">
+
+											<span class="lazy-vice-ad"><div style="min-height:1px"></div></span>
+
+											<h2 class="article__dek hed-l m-b-4-xs m-b-5-m">“People always wanna understand, you know? But I feel like it’s good to not understand sometimes... so if I can help confuse people, I think that’s a good thing.” </h2>
+
+											<div class="dsp-block-xs dsp-none-m m-b-4-xs">
+
+												<div class="bod-xs dsp-flex-xs grd-algn-flex-start-xs article__contributions">
+
+													<span class="contributor__by">by<!-- --> 
+													</span>
+
+													<a class="contributor__link hed-xs" title="Frankie Dunn" href="#">Frankie Dunn
+													</a>
+
+												</div>
+
+												<div class="m-l-2-xs m-r-2-xs pipe">|
+												</div>
+
+												<div class="article__contributions__publishdate">11 November 2019, 8:00am
+												</div>
+
+											</div>
+
+										</div>
+
+										<p class="article__lede__credit--longform--mobile m-b-4-xs m-b-5-m dsp-block-xs dsp-none-l bod-xs">
+										</p>
+
+										<div data-type="body-text" class="article__body dsp-block-xs bod-m">
+
+											<p>
+												<i>This story originally appeared in i-D's
+
+													<a href="#" target="_blank">The Post Truth Truth Issue
+													</a>
+													, no. 357, Autumn 2019. Order your copy
+
+													<a href="https://i-dstore.co/products/357-the-post-truth-truth-issue" target="_blank">here
+													</a>.	
+
+												</i>
+
+											</p>
+
+												{% endfor %}
+
+			 									{{ content }}	
+
+											<p>
+												
+											</p>
+
+										</div>	
 
 									</div>					
 
@@ -123,10 +173,6 @@
 					</div>
 
 				</div>
-
-			{% endfor %}
-
-			 {{ content }}	
 
 		</main>
 
