--- a/_includes/script.html
+++ b/_includes/script.html
@@ -70,3 +70,15 @@
 
 <!-- This is The Header Animation -->
 
+<script type="text/javascript">
+	
+var oldPageYOffset = 0;
+$(window).scroll(function(){
+  if (window.pageYOffset != oldPageYOffset)
+  {
+    oldPageYOffset = window.pageYOffset;
+    console.log("Window scrolling changed");
+  }
+});
+
+</script>
