update head & script html
made the head have scroll preload

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,20 @@
 
   -->
 
+  
+  <script type="text/javascript">
+    
+  var oldPageYOffset = 0;
+  $(window).scroll(function(){
+    if (window.pageYOffset != oldPageYOffset)
+    {
+      oldPageYOffset = window.pageYOffset;
+      console.log("Window scrolling changed");
+    }
+  });
+
+  </script>
+    
   <!-- global styles -->
 
   <style type="text/css">
