--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -28,8 +28,8 @@
                           <div class="grid__wrapper__card__thumbnail">
                     
                             <picture>
-                              <source srcset="http://images.weserv.nl/?url=https://zen-developers.github.io/zendigital.github.io/{{post.image}}&w=200&h=200&output=jpg&q=65" media="(min-width: 400px; min-height:700px)">
-                              <source srcset="http://images.weserv.nl/?url=https://zen-developers.github.io/zendigital.github.io/{{post.image}}&w=200&h=200&output=jpg&q=65" media="(min-width: 0px)">
+                              <source srcset="{{post.image}}" media="(min-width: 400px; min-height:700px)">
+                              <source srcset="{{post.image}}" media="(min-width: 0px)">
                               <img src="http://images.weserv.nl/?url=https://zen-developers.github.io/zendigital.github.io/{{post.image}}&w=200&h=200&output=jpg&q=65"/>
                             </picture>
 
