--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,7 +1,7 @@
 
               <div>
 
-                <div class="hero m-b-7-1" priority="2" style="background-image: url(http://images.weserv.nl/?url=zen-developers.github.io/zendigital.github.io{{site.posts[0].image}}&w=200&h=200&output=jpg&q=65)">
+                <div class="hero m-b-7-1" priority="2" style="background-image: url(http://images.weserv.nl/?url=zen-developers.github.io/zendigital.github.io/{{site.posts[0].image}}&w=200&h=200&output=jpg&q=65)">
                   
                   <a href="{{site.posts[0].url}}">
 
