--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,7 +1,7 @@
 
               <div>
 
-                <div class="hero m-b-7-1" priority="2" style="background-image: url({{site.posts[0].image}}&w=2000&h=2000&output=png&q=200)">
+                <div class="hero m-b-7-1" priority="2" style="background-image: url({{site.posts[0].image}})">
                   
                   <a href="{{site.posts[0].url}}">
 
