--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,7 +1,7 @@
 
               <div>
 
-                <div class="hero m-b-7-1" priority="2" style="background-image: url({{site.posts[0].image}})">
+                <div class="hero m-b-7-1" priority="2" style="background-image: url(http://images.weserv.nl/?url=https://zen-developers.github.io/zendigital.github.io/{{site.posts[0].image}})">
                   
                   <a href="{{site.posts[0].url}}">
 
