--- a/assets/css/_sass/_fonts.scss
+++ b/assets/css/_sass/_fonts.scss
@@ -1,10 +1,11 @@
 @font-face {
-  font-family: "UniversNextPro-Ext, Univers Next Pro";
-  src: url("/fonts/univers-next-pro-extended-58f39ec1d8e7a.woff");
-  src: url("/fonts/univers-next-pro-extended-58f39ec1d8e7a.woff") format("woff");
-  font-weight: 300;
+  font-family: "UniversProExtended";
+  src: url("/assets/fonts/UniversProExtended.woff");
+  src: url("/assets/fonts/UniversProExtended.woff") format("woff");
+  font-weight: 500;
   font-style: normal;
 }
+
 
 @font-face {
   font-family: "UniversNextPro-Cond, Univers Next Pro";
