--- a/assets/css/_sass/_-sections-dir.scss
+++ b/assets/css/_sass/_-sections-dir.scss
@@ -9,6 +9,10 @@
         "intl",
         "theme",
         "extra",
+        "43",
+        "2",
+        "zen.critical",
+        "hompage",
         "jsx-478518511",
         "jsx-539458209",
         "jsx-1153413283",
