--- a/assets/css/_sass/_-sections-dir.scss
+++ b/assets/css/_sass/_-sections-dir.scss
@@ -12,7 +12,7 @@
         "43",
         "2",
         "zen.critical",
-        "hompage",
+        "homepage",
         "jsx-478518511",
         "jsx-539458209",
         "jsx-1153413283",
