--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Zen - An online where urban culture meets the underground.</title>
-  <meta name="keywords" content="zen, magazine, zen magazine, fashion, fashion magazine, photography, fashion design, music, art, design, culture, news, politics, feminism, pop culture, film, street style, documentaries, fashion films, celebrities"/>
-  <meta name="thumbnail" content="/img/i-D_333x333.png"/>
+  <meta name="keywords" content="zen, magazine, zen magazine, fashion, fashion magazine, photography, fashion design, music, art, design, culture, news, feminism, pop culture, film, street style, documentaries, fashion films, celebrities"/>
+  <meta name="thumbnail" content="/img/Zen_333x333.png"/>
   <meta name="theme-color" content="#000000">
 
   <link rel="canonical" href="" />
@@ -12,19 +12,170 @@
   <link rel="next" href="#" />
     
 
+
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
 
-  <!-- Include link attributes for fonts
+  
+<!-- BEGIN Krux Control Tag -->
 
-  <link rel="preload" href="/assets/fonts/univers-next-pro-regular-58f40dcc81e4f.woff" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/assets/fonts/univers-next-pro-thin-58f39cd9e4cc4.woff" as="fonts" crossorigin="anonymous">
-  <link rel="preload" href="/assets/fonts/univers-next-pro-bold-58f40d9eaccce.woff" as="fonts" crossorigin="anonymous">
-  <link rel="preload" href="/assets/fonts/univers-next-pro-light-condensed-58f3aae7e5bce.woff" as="fonts" crossorigin="anonymous">
+<script class="kxct" data-id="JLnZe0wH" data-timing="async" data-version="1.9" type="text/javascript">
+ window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
+ (function(){
+   var k=document.createElement('script');k.type='text/javascript';k.async=true;
+   var m,src=(m=location.href.match(/\bkxsrc=([^&]+)/))&&decodeURIComponent(m[1]);
+   k.src = /^https?:\/\/([a-z0-9_\-\.]+\.)?krxd\.net(:\d{1,5})?\//i.test(src) ? src : src === "disable" ? "" :
+     (location.protocol==="https:"?"https:":"http:")+"//zen-developers.github.io/zendigital.github.io/assets/js/controltag?confid=JLnZe0wH"
+ ;
+   var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
+ }());
 
-  -->
+</script>
+<script>
+  window.Krux ||
+    ((Krux = function() {
+      Krux.q.push(arguments);
+    }).q = []);
+  function kruxInterchange() {
+    function retrieve(n) {
+      var m,
+        k = 'kxvice_' + n;
+      if (window.localStorage) {
+        return window.localStorage[k] || '';
+      } else if (navigator.cookieEnabled) {
+        m = document.cookie.match(k + '=([^;]*)');
+        return (m && unescape(m[1])) || '';
+      } else {
+        return '';
+      }
+    }
+
+    // initialize user and segments
+    Krux.user = retrieve('kuid');
+    Krux.segments = (retrieve('segs') && retrieve('segs').split(',')) || [];
+  }
+
+  function runKruxInterchange(retry) {
+    kruxInterchange();
+    if (retry < 3 && window.Krux && !window.Krux.user) {
+      window.setTimeout(function() {
+        runKruxInterchange(retry + 1);
+      }, 5000);
+    }
+  }
+
+  runKruxInterchange(0);
+</script>
+
+<!-- END Krux Controltag -->
+
+<script type="text/javascript">
+  window.loadKruxGPT = function() {
+    googletag.cmd.push(function() {
+      googletag.pubads().setTargeting("ksg", Krux.segments);
+      googletag.pubads().setTargeting("kuid", Krux.user);
+      googletag.pubads().setTargeting('gs_cat', gs_channels);
+      googletag.pubads().enableAsyncRendering();
+      googletag.pubads().disableInitialLoad();
+      googletag.pubads().collapseEmptyDivs(true);
+      googletag.pubads().updateCorrelator();
+      googletag.enableServices();
+    });
+  }
+</script>
+
+<!-- End: GPT -->
+
+
+  <!-- Include link attributes for fonts -->
+  <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversProExtended.woff" as="font" crossorigin="anonymous">
+<link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/univers-next-pro-light-condensed-58f3aae7e5bce.woff" as="font" crossorigin="anonymous">
+<link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversPro-Medium.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UrbanoCond.woff2" as="font" crossorigin="anonymous">
+
+  <!--Rendered at: Wed Nov 20 2019 10:15:35 GMT+0000 (Coordinated Universal Time)-->
+  <script>
+window.__Z3N = {};
+</script>
+
+
+  <meta name="description" content="Don't follow join the movement" />
+  <meta name="thumbnail" content="#"/>
+  <meta name="theme-color" content="#000000">
+
+
+  <link rel="canonical" href="https://zen-developers.github.io/zendigital.github.io/" />
+    
+    <!-- jekyll logic must be inserted --->
+
+  <link rel="next" href="https://zen-developers.github.io/zendigital.github.io/latest?page=2" />
+
 
   
+    
+
+    <link rel="alternate" type="application/rss+xml" title="zen" href="#"/>
+
+
+    <!-- include homepage specific logic here -->
+    
+      
+
+<link rel="alternate" hreflang="en-gb" href="https://zen-developers.github.io/zendigital.github.io/en_uk" />
+
+
+
+
+    <!-- Favicons -->
+    <link rel="manifest" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/manifest.json">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="theme-color" content="#fff">
+<meta name="application-name" content="zen">
+<link rel="apple-touch-icon" sizes="57x57" href="https://zen-developers.github.io/zendigital.github.io/favicons/zen/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/i-d/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/i-d/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-180x180.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="zen">
+<link rel="icon" type="image/png" sizes="228x228" href="zen-developers.github.io/zendigital.github.io/assets/favicons/zen/coast-228x228.png">
+<link rel="yandex-tableau-widget" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/yandex-browser-manifest.json">
+<meta name="msapplication-TileColor" content="#fff">
+<meta name="msapplication-TileImage" content="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/mstile-144x144.png">
+<meta name="msapplication-config" content="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/browserconfig.xml">
+<link rel="icon" type="image/png" sizes="32x32" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="192x192" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/favicon-16x16.png">
+<link rel="shortcut icon" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/i-d/favicon.ico">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-320x460.png">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-640x920.png">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-640x1096.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-750x1294.png">
+<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/i-d/apple-touch-startup-image-1182x2208.png">
+<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-1242x2148.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 1)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-748x1024.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 1)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-768x1004.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-1496x2048.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-1536x2008.png">
+
+    <!-- MS Application -->
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-square70x70logo" content=""/>
+    <meta name="msapplication-TileImage" content=""/>
+    <meta name="msapplication-square150x150logo" content=""/>
+    <meta name="msapplication-wide310x150logo" content=""/>
+    <meta name="msapplication-square310x310logo" content=""/>
+    
+
+
+  
+
+
   <script type="text/javascript">
     
    var scroll = 0;
