--- a/assets/css/_sass/_base.scss
+++ b/assets/css/_sass/_base.scss
@@ -196,7 +196,7 @@ td,th {
 }
 
 .article__pull-quote,.grid__wrapper__card__text__title,.hed-l,.hed-m,.hed-s,.hed-xl,.hed-xs,.hed-xxl,.hed-xxs,h2 {
-    font-family: Druk-Wide-Bold, !important;
+    font-family: 'UniversExtendedBold' !important;
     font-weight: 500;
     line-height: 1.1;
     letter-spacing: 1px
