--- a/_includes/script.html
+++ b/_includes/script.html
@@ -70,14 +70,31 @@
 
 <!-- This is The Header Animation -->
 
-
 <!-- cover story --->
 <script type="text/javascript">
 
 (function(){
 	'use strict';
 
-	//var newElement= document.createElement('li');
+	var element = document.createElement('div')
+
+	element.style.cssText = "width:200px;"
+
+	document.body.appendChild( element );
+
+
+}());
+
+</script>
+
+
+<!-- cover story 
+<script type="text/javascript">
+
+(function(){
+	'use strict';
+
+	var newElement= document.createElement('div');
 	//newElement.textContent = 'I am a new Element';
 
 	var div = document.getElement('homepage');
@@ -99,3 +116,5 @@
 }());
 
 </script>
+
+--->
