--- a/_includes/head.html
+++ b/_includes/head.html
@@ -172,7 +172,7 @@ window.__Z3N = {};
     <meta name="msapplication-square310x310logo" content=""/>
     
 
-
+    {%- include script.html -%}
   
 
 
