--- a/_includes/script.html
+++ b/_includes/script.html
@@ -80,7 +80,7 @@
 
 	element.style.cssText = "width:200px;"
 
-	document.body.appendChild('element');
+	document.body.appendChild(element);
 
 
 }());
