--- a/_includes/script.html
+++ b/_includes/script.html
@@ -73,6 +73,7 @@
 <!-- cover story --->
 <script type="text/javascript">
 
+(function(){
 	'use strict';
 
 	var element = document.createElement('div')
@@ -82,6 +83,7 @@
 	document.body.appendChild(element);
 
 
+}());
 
 </script>
 
