--- a/_includes/script.html
+++ b/_includes/script.html
@@ -70,34 +70,17 @@
 
 <!-- This is The Header Animation -->
 
+
 <!-- cover story --->
 <script type="text/javascript">
 
 (function(){
 	'use strict';
 
-	var element = document.createElement('div')
-
-	element.style.cssText = "width:200px;"
-
-	document.body.appendChild(element);
-
-
-}());
-
-</script>
-
-
-<!-- cover story 
-<script type="text/javascript">
-
-(function(){
-	'use strict';
-
 	var newElement= document.createElement('div');
-	//newElement.textContent = 'I am a new Element';
+	newElement.style.cssText = "width:200px;";
 
-	var div = document.getElement('homepage');
+	var div = document.getElementByClass('homepage');
 
 	
 	//list.appendChild(newElement);
@@ -105,7 +88,7 @@
 	//list.insertBefore(newElement,list.firstElementChild);
 
 	var replaceElement = document.createElement('div');
-	replaceElement.textcontent = 'I am replacing you';
+	newElement.style.cssText = "width:200px;";
 
 	div.replaceChild(replaceElement,newElement);
 
@@ -116,5 +99,3 @@
 }());
 
 </script>
-
---->
