--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
           <div class="hompage-container">
 
-            <div class="homepage">
+            <div id="homepage">
               {%- include cover.html -%}
               {%- include latest.html -%}   
               {%- include feature.html -%}   
@@ -32,8 +32,6 @@
       </div>
 
     </div>
-
-    {%- include script.html -%}
 
   </body>
 
