--- a/_includes/script.html
+++ b/_includes/script.html
@@ -48,6 +48,8 @@
 
 <script type="text/javascript" src="assets/js/scripts.js"></script>
 
+<script type="text/javascript" src="assets/js/cover.js"></script>
+
 <script type="text/javascript" src="assets/js/bj-lazy-load.min.js"></script>
 
 <script type="text/javascript" src="assets/js/osd.js"></script>
