made some changes to the font

--- a/assets/css/_sass/_fonts.scss
+++ b/assets/css/_sass/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "UniversProExtended";
+  font-family: "UniversProExtendedBold";
   src: url("/fonts/UniversProExtended.woff");
   src: url("/fonts/UniversProExtended.woff") format("woff");
   font-weight: 500;
@@ -85,8 +85,8 @@
 
 
 @font-face {
-  font-family: 'Akzidenz-grotesk-regular';
-  src: local('Akzidenz-grotesk-regular'), url('/fonts/Akzidenz-grotesk-regular.ttf') format('truetype');
+  font-family: 'UniversProExtended';
+  src: local('UniversProExtended'), url('/fonts/UniversProExtended.ttf') format('truetype');
 }
 
 @font-face {
