--- a/_includes/head.html
+++ b/_includes/head.html
@@ -88,7 +88,7 @@
 
 
   <!-- Include link attributes for fonts -->
-  <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversProExtended.woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversProExtendedBold.woff" as="font" crossorigin="anonymous">
 <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/univers-next-pro-light-condensed-58f3aae7e5bce.woff" as="font" crossorigin="anonymous">
 <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversPro-Medium.woff2" as="font" crossorigin="anonymous">
 <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UrbanoCond.woff2" as="font" crossorigin="anonymous">
@@ -129,11 +129,11 @@ window.__Z3N = {};
     <!-- Favicons -->
     <link rel="manifest" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/manifest.json">
 <meta name="mobile-web-app-capable" content="yes">
-<meta name="theme-color" content="#fff">
+<meta name="theme-color" content="#ffffff">
 <meta name="application-name" content="zen">
 <link rel="apple-touch-icon" sizes="57x57" href="https://zen-developers.github.io/zendigital.github.io/favicons/zen/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/i-d/apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/i-d/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-76x76.png">
 <link rel="apple-touch-icon" sizes="114x114" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-114x114.png">
 <link rel="apple-touch-icon" sizes="120x120" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-icon-120x120.png">
@@ -151,7 +151,7 @@ window.__Z3N = {};
 <link rel="icon" type="image/png" sizes="32x32" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="192x192" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="16x16" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/favicon-16x16.png">
-<link rel="shortcut icon" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/i-d/favicon.ico">
+<link rel="shortcut icon" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/favicon.ico">
 <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-320x460.png">
 <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-640x920.png">
 <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="https://zen-developers.github.io/zendigital.github.io/assets/favicons/zen/apple-touch-startup-image-640x1096.png">
