--- a/assets/css/_sass/_fonts.scss
+++ b/assets/css/_sass/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "UniversProExtendedBold";
-  src: url("/fonts/UniversProExtendedBold.woff");
-  src: url("/fonts/UniversProExtendedBold.woff") format("woff");
+  src: url("https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversProExtendedBold.woff");
+  src: url("https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversProExtendedBold.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
