made changes to the font

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -88,7 +88,7 @@
 
 
   <!-- Include link attributes for fonts -->
-  <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversProExtendedBold.woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversExtendedBold.ttf" as="font" crossorigin="anonymous">
 <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/univers-next-pro-light-condensed-58f3aae7e5bce.woff" as="font" crossorigin="anonymous">
 <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversPro-Medium.woff2" as="font" crossorigin="anonymous">
 <link rel="preload" href="https://zen-developers.github.io/zendigital.github.io/assets/fonts/UrbanoCond.woff2" as="font" crossorigin="anonymous">
