--- a/assets/css/_sass/_fonts.scss
+++ b/assets/css/_sass/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: "UniversProExtendedBold";
-  src: url("https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversProExtendedBold.woff");
-  src: url("https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversProExtendedBold.woff") format("woff");
+  font-family: "UniversProExtendedBold, Univers Next Pro";
+  src: url("https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversExtendedBold.ttf");
+  src: url("https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversExtendedBold.ttf") format('truetype');
   font-weight: 500;
   font-style: normal;
 }
