changes to the fonts

--- a/assets/css/_sass/_fonts.scss
+++ b/assets/css/_sass/_fonts.scss
@@ -85,10 +85,9 @@
 
 
 @font-face {
-  font-family: 'UniversProExtended';
-  src: local('UniversProExtended'), url('/fonts/UniversProExtended.ttf') format('truetype');
+  font-family: 'UniversExtendedBold';
+  src: local('UniversExtendedBold'), url('https://zen-developers.github.io/zendigital.github.io/assets/fonts/UniversExtendedBold.ttf') format('truetype');
 }
-
 /* Font downloaded from FontsForWeb.com */
 
 
