--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,21 +6,21 @@
             </div>
             <div class="navbar__body__header dsp-flex-xs p-l-4-xs p-l-5-m">
                 <div class="icon-close__wrapper m-b-aut-xs m-t-aut-xs dsp-none-xs">
-                    <img class="icon icon-close dsp-block-xs" src="https://vice-web-statics-cdn.vice.com/icons/close-navigation-menu-dark.svg" />
+                    <img class="icon icon-close dsp-block-xs" src="" />
                 </div>
             </div>
             <div class="navbar__body navbar__sections p-l-4-xs p-l-5-m p-b-4-xs p-b-5-m p-r-4-xs p-r-5-m">
                 <div class="nav__search-bar p-3-xs dsp-flex-xs grd-algn-center-xs">
                     <input id="search" class="search-input hed-m dsp-inline-xs col-11-xs" placeholder="Search..." value="" required="" />
                     <div class="search-icon__wrapper col-1-xs text-right-xs">
-                        <img class="search-icon" src="https://vice-web-statics-cdn.vice.com/icons/search-magnifying-dark.svg" alt="search" />
+                        <img class="search-icon" src="#" alt="search" />
                     </div>
                 </div>
                 <div class="navbar__section navbar__section--tier-1 p-t-5-xs">
                     <ul class="navbar__section__items">
                         <li class="navbar__section__item">
                             <div>
-                                <a href="https://i-d.vice.com/en_uk/read" title="Read" class="hed-m">Read</a>
+                                <a href="#" title="Read" class="hed-m">Read</a>
                             </div>
                         </li>
                         <li class="navbar__section__item">
@@ -66,27 +66,27 @@
                 </div>
             </div>
             <div data-type="footer" class="navbar__footer col-12-xs dsp-block-xs p-t-5-xs p-l-4-xs p-l-5-m p-r-4-xs p-r-5-m p-b-5-xs">
-                <div class="navbar__footer__logo dsp-block-xs p-b-5-xs"><img class="dsp-block-xs" src="https://vice-web-statics-cdn.vice.com/logos/i-d-logo-white.svg" alt="footer logo" /></div>
+                <div class="navbar__footer__logo dsp-block-xs p-b-5-xs"><img class="dsp-block-xs" src="#ooter logo" /></div>
                 <ul class="navbar__social-section grd-just-center-xs m-b-0-xs">
                     <li class="m-b-0-xs m-r-3-xs m-b-3-xs">
-                        <a target="_blank" href="https://www.facebook.com/id.co"><img class="icon-facebook" src="https://vice-web-statics-cdn.vice.com/icons/facebook.svg" alt="Facebook" /></a>
+                        <a target="_blank" href="https://www.facebook.com/id.co"><img class="icon-facebook" src="#k" /></a>
                     </li>
                     <li class="m-b-0-xs m-r-3-xs m-b-3-xs">
-                        <a target="_blank" href="https://twitter.com/i_D"><img class="icon-twitter" src="https://vice-web-statics-cdn.vice.com/icons/twitter.svg" alt="Twitter" /></a>
+                        <a target="_blank" href="https://twitter.com/i_D"><img class="icon-twitter" src="# /></a>
                     </li>
                     <li class="m-b-0-xs m-r-3-xs m-b-3-xs">
-                        <a target="_blank" href="https://i-donline.tumblr.com"><img class="icon-tumblr" src="https://vice-web-statics-cdn.vice.com/icons/tumblr.svg" alt="Tumblr" /></a>
+                        <a target="_blank" href="https://i-donline.tumblr.com"><img class="icon-tumblr" src="#></a>
                     </li>
                     <li class="m-b-0-xs m-r-3-xs m-b-3-xs">
-                        <a target="_blank" href="https://www.youtube.com/user/idmagazineonline%3Fsub_confirmation%3D1"><img class="icon-youtube" src="https://vice-web-statics-cdn.vice.com/icons/youtube-white.svg" alt="YouTube" /></a>
+                        <a target="_blank" href="https://www.youtube.com/user/idmagazineonline%3Fsub_confirmation%3D1"><img class="icon-youtube" src="#uTube" /></a>
                     </li>
                     <li class="m-b-0-xs m-r-3-xs m-b-3-xs">
-                        <a target="_blank" href="https://instagram.com/i_d"><img class="icon-instagram" src="https://vice-web-statics-cdn.vice.com/icons/instagram-white.svg" alt="Instagram" /></a>
+                        <a target="_blank" href="https://instagram.com/i_d"><img class="icon-instagram" src="#Instagram" /></a>
                     </li>
                 </ul>
                 <div class="locales-dropdown m-t-3-xs m-b-3-xs">
                     <div class="locales-dropdown__title hed-xxs m-b-2-xs">Edition</div>
-                    <div class="current-locale hed-xs m-t-1-xs m-b-1-xs"><span class="current-locale__language dsp-inline-block-xs m-r-1-xs">en</span><span class="current-locale__label dsp-inline-block-xs bod-xs">United Kingdom</span><span class="current-locale__indicator dsp-inline-block-xs float-right-xs"><img class="icon icon-dropdown-caret" src="https://vice-web-statics-cdn.vice.com/icons/dropdown-caret.svg"/></span></div>
+                    <div class="current-locale hed-xs m-t-1-xs m-b-1-xs"><span class="current-locale__language dsp-inline-block-xs m-r-1-xs">en</span><span class="current-locale__label dsp-inline-block-xs bod-xs">United Kingdom</span><span class="current-locale__indicator dsp-inline-block-xs float-right-xs"><img class="icon icon-dropdown-caret" src="#n></div>
                     <ul class="locales-dropdown__list">
                         <li class="locales-dropdown__list-item hed-xs m-b-1-xs"><span class="locales-dropdown__list-item__language dsp-inline-block-xs m-r-1-xs">en</span><span class="locales-dropdown__list-item__label bod-xs dsp-inline-block-xs">Australia</span></li>
                         <li class="locales-dropdown__list-item hed-xs m-b-1-xs"><span class="locales-dropdown__list-item__language dsp-inline-block-xs m-r-1-xs">fr</span><span class="locales-dropdown__list-item__label bod-xs dsp-inline-block-xs">France</span></li>
@@ -119,3 +119,12 @@
 </div>
 <div class="overlay"></div>
 <div id="modal-root"></div>
+
+<script type="text/javascript">
+	
+$(".icon").on("click",function(){
+  $(".navbar").removeClass(".navbar .navbar--closed");
+  $(this).addClass(".navbar .navbar--open");
+});
+
+</script>>
